--- a/MoreLinq.Test/MoreLinq.Test.csproj
+++ b/MoreLinq.Test/MoreLinq.Test.csproj
@@ -53,11 +53,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\MoreLinq\KeyValuePair.cs">
-      <Link>KeyValuePair.cs</Link>
-    </Compile>
     <Compile Include="AcquireTest.cs" />
     <Compile Include="IndexTest.cs" />
+    <Compile Include="KeyValuePair.cs" />
     <Compile Include="SplitTest.cs" />
     <Compile Include="GroupAdjacentTest.cs" />
     <Compile Include="PairwiseTest.cs" />
