--- a/pkg/MoreLinq.Source.MoreEnumerable.TakeLast.nuspec
+++ b/pkg/MoreLinq.Source.MoreEnumerable.TakeLast.nuspec
@@ -2,7 +2,7 @@
 <package>
     <metadata>
         <id>MoreLinq.Source.MoreEnumerable.TakeLast</id>
-        <version>1.0.0</version>
+        <version>1.0.1</version>
         <title>MoreLINQ's TakeLast for C# Sequences (Source)</title>
         <authors>MoreLINQ Developers</authors>
         <owners>Jon Skeet, Atif Aziz</owners>
@@ -13,6 +13,7 @@
         <description>C# source implementation that enhances LINQ to Objects with the method TakeLast. Returns a specified number of contiguous elements from the end of a sequence.</description>
         <language>en-US</language>
         <tags>linq extensions</tags>
+        <releaseNotes>Documentation fix</releaseNotes>
     </metadata>
     <files>
         <file src="..\MoreLinq\TakeLast.cs" target="content\net35\MoreLinq\MoreEnumerable.TakeLast.cs" />
