--- a/pkg/morelinq.nuspec
+++ b/pkg/morelinq.nuspec
@@ -13,6 +13,7 @@
         <description>This project enhances LINQ to Objects with the following methods: Acquire, AssertCount, Batch, Concat, Consume, DistinctBy, EquiZip, ExceptBy, Fold, ForEach, Generate, GenerateByIndex, GroupAdjacent, Index, MaxBy, MinBy, Pad, Pairwise, Pipe, Prepend, PreScan, Scan, SingleOrFallback, SkipUntil, Split, TakeEvery, TakeLast, TakeUntil, ToDataTable, ToDelimitedString, ToHashSet, Trace, Zip, ZipLongest</description>
         <language>en-US</language>
         <tags>linq extensions</tags>
+        <releaseNotes>See http://code.google.com/p/morelinq/wiki/ApiChanges</releaseNotes>
     </metadata>
     <files>
         <file src="..\MoreLinq\bin\Release\MoreLinq.dll" target="lib\net35\MoreLinq.dll" />
