--- a/pkg/MoreLinq.Source.MoreEnumerable.Fold.nuspec
+++ b/pkg/MoreLinq.Source.MoreEnumerable.Fold.nuspec
@@ -2,7 +2,7 @@
 <package>
     <metadata>
         <id>MoreLinq.Source.MoreEnumerable.Fold</id>
-        <version>1.0.0</version>
+        <version>1.1.0</version>
         <title>MoreLINQ's Fold for C# Sequences (Source)</title>
         <authors>MoreLINQ Developers</authors>
         <owners>Jon Skeet, Atif Aziz</owners>
@@ -13,6 +13,10 @@
         <description>C# source implementation that enhances LINQ to Objects with the method Fold. Returns the result of applying a function to items of a fixed-size sequence.</description>
         <language>en-US</language>
         <tags>linq extensions</tags>
+        <dependencies>
+            <dependency id="MoreLinq.Source.MoreEnumerable.AssertCount" version="[1,2)" />
+            <dependency id="MoreLinq.Source.MoreEnumerable.Index" version="[1,2)" />
+        </dependencies>
     </metadata>
     <files>
         <file src="..\MoreLinq\Fold.cs" target="content\net35\MoreLinq\MoreEnumerable.Fold.cs" />
