--- a/pkg/MoreLinq.Source.MoreEnumerable.nuspec
+++ b/pkg/MoreLinq.Source.MoreEnumerable.nuspec
@@ -2,7 +2,7 @@
 <package>
     <metadata>
         <id>MoreLinq.Source.MoreEnumerable</id>
-        <version>1.0.0</version>
+        <version>1.1.0</version>
         <title>MoreLINQ for C# Sequences (Source)</title>
         <authors>MoreLINQ Developers</authors>
         <owners>Jon Skeet, Atif Aziz</owners>
@@ -10,7 +10,7 @@
         <projectUrl>http://code.google.com/p/morelinq/</projectUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <summary>Enhances LINQ to Objects with extra methods, in a manner which keeps to the spirit of LINQ.</summary>
-        <description>C# source implementation that enhances LINQ to Objects with the following methods: Acquire, AssertCount, Batch, Concat, Consume, DistinctBy, EquiZip, ExceptBy, ForEach, Generate, GenerateByIndex, GroupAdjacent, Index, MaxBy, MinBy, Pad, Pairwise, Pipe, Prepend, PreScan, Scan, SingleOrFallback, SkipUntil, Split, TakeEvery, TakeLast, TakeUntil, ToDataTable, ToDelimitedString, ToHashSet, Trace, Zip, ZipLongest</description>
+        <description>C# source implementation that enhances LINQ to Objects with the following methods: Acquire, AssertCount, Batch, Concat, Consume, DistinctBy, EquiZip, ExceptBy, Fold, ForEach, Generate, GenerateByIndex, GroupAdjacent, Index, MaxBy, MinBy, Pad, Pairwise, Pipe, Prepend, PreScan, Scan, SingleOrFallback, SkipUntil, Split, TakeEvery, TakeLast, TakeUntil, ToDataTable, ToDelimitedString, ToHashSet, Trace, Zip, ZipLongest</description>
         <language>en-US</language>
         <tags>linq extensions</tags>
         <dependencies>
@@ -22,6 +22,7 @@
             <dependency id="MoreLinq.Source.MoreEnumerable.DistinctBy" version="[1,2)" />
             <dependency id="MoreLinq.Source.MoreEnumerable.EquiZip" version="[1,2)" />
             <dependency id="MoreLinq.Source.MoreEnumerable.ExceptBy" version="[1,2)" />
+            <dependency id="MoreLinq.Source.MoreEnumerable.Fold" version="[1,2)" />
             <dependency id="MoreLinq.Source.MoreEnumerable.ForEach" version="[1,2)" />
             <dependency id="MoreLinq.Source.MoreEnumerable.Generate" version="[1,2)" />
             <dependency id="MoreLinq.Source.MoreEnumerable.GenerateByIndex" version="[1,2)" />
@@ -42,7 +43,7 @@
             <dependency id="MoreLinq.Source.MoreEnumerable.TakeLast" version="[1,2)" />
             <dependency id="MoreLinq.Source.MoreEnumerable.TakeUntil" version="[1,2)" />
             <dependency id="MoreLinq.Source.MoreEnumerable.ToDataTable" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.ToDelimitedString" version="[1,2)" />
+            <dependency id="MoreLinq.Source.MoreEnumerable.ToDelimitedString" version="[1.1,2)" />
             <dependency id="MoreLinq.Source.MoreEnumerable.ToHashSet" version="[1,2)" />
             <dependency id="MoreLinq.Source.MoreEnumerable.Trace" version="[1,2)" />
             <dependency id="MoreLinq.Source.MoreEnumerable.Zip" version="[1,2)" />
