--- a/pkg/MoreLinq.Source.MoreEnumerable.Acquire.nuspec
+++ b/pkg/MoreLinq.Source.MoreEnumerable.Acquire.nuspec
@@ -2,7 +2,7 @@
 <package>
     <metadata>
         <id>MoreLinq.Source.MoreEnumerable.Acquire</id>
-        <version>1.0.0</version>
+        <version>1.0.1</version>
         <title>MoreLINQ's Acquire for C# Sequences (Source)</title>
         <authors>MoreLINQ Developers</authors>
         <owners>Jon Skeet, Atif Aziz</owners>
@@ -13,8 +13,15 @@
         <description>C# source implementation that enhances LINQ to Objects with the method Acquire. Ensures that a source sequence of objects are all acquired successfully. If the acquisition of any one fails then those successfully acquired till that point are disposed.</description>
         <language>en-US</language>
         <tags>linq extensions</tags>
+        <releaseNotes>Microsoft .NET Framework 2.0 support via LINQBridge</releaseNotes>
+        <dependencies>
+            <group targetFramework="net35" />
+            <group targetFramework="net20">
+                <dependency id="LinqBridge.Embedded" />
+            </group>
+        </dependencies>
     </metadata>
     <files>
-        <file src="..\MoreLinq\Acquire.cs" target="content\net35\MoreLinq\MoreEnumerable.Acquire.cs" />
+        <file src="..\MoreLinq\Acquire.cs" target="content\net20\MoreLinq\MoreEnumerable.Acquire.cs" />
     </files>
 </package>
