--- a/pkg/MoreLinq.Source.MoreEnumerable.Fold.nuspec
+++ b/pkg/MoreLinq.Source.MoreEnumerable.Fold.nuspec
@@ -2,7 +2,7 @@
 <package>
     <metadata>
         <id>MoreLinq.Source.MoreEnumerable.Fold</id>
-        <version>1.1.0</version>
+        <version>1.1.1</version>
         <title>MoreLINQ's Fold for C# Sequences (Source)</title>
         <authors>MoreLINQ Developers</authors>
         <owners>Jon Skeet, Atif Aziz</owners>
@@ -13,13 +13,25 @@
         <description>C# source implementation that enhances LINQ to Objects with the method Fold. Returns the result of applying a function to items of a fixed-size sequence.</description>
         <language>en-US</language>
         <tags>linq extensions</tags>
+        <releaseNotes>Microsoft .NET Framework 2.0 support via LINQBridge</releaseNotes>
         <dependencies>
-            <dependency id="MoreLinq.Source.MoreEnumerable.AssertCount" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.Index" version="[1,2)" />
+            <group>
+                <dependency id="MoreLinq.Source.MoreEnumerable.AssertCount" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Index" version="[1,2)" />
+            </group>
+            <group targetFramework="net35">
+                <dependency id="MoreLinq.Source.MoreEnumerable.AssertCount" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Index" version="[1,2)" />
+            </group>
+            <group targetFramework="net20">
+                <dependency id="LinqBridge.Embedded" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.AssertCount" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Index" version="[1,2)" />
+            </group>
         </dependencies>
     </metadata>
     <files>
-        <file src="..\MoreLinq\Fold.cs" target="content\net35\MoreLinq\MoreEnumerable.Fold.cs" />
-        <file src="..\MoreLinq\Fold.g.cs" target="content\net35\MoreLinq\MoreEnumerable.Fold.g.cs" />
+        <file src="..\MoreLinq\Fold.cs" target="content\net20\MoreLinq\MoreEnumerable.Fold.cs" />
+        <file src="..\MoreLinq\Fold.g.cs" target="content\net20\MoreLinq\MoreEnumerable.Fold.g.cs" />
     </files>
 </package>
