--- a/pkg/MoreLinq.Source.MoreEnumerable.Generate.nuspec
+++ b/pkg/MoreLinq.Source.MoreEnumerable.Generate.nuspec
@@ -2,7 +2,7 @@
 <package>
     <metadata>
         <id>MoreLinq.Source.MoreEnumerable.Generate</id>
-        <version>1.0.1</version>
+        <version>1.0.2</version>
         <title>MoreLINQ's Generate for C# Sequences (Source)</title>
         <authors>MoreLINQ Developers</authors>
         <owners>Jon Skeet, Atif Aziz</owners>
@@ -13,9 +13,15 @@
         <description>C# source implementation that enhances LINQ to Objects with the method Generate. Returns a sequence of values based on indexes.</description>
         <language>en-US</language>
         <tags>linq extensions</tags>
-        <releaseNotes>Documentation fix</releaseNotes>
+        <releaseNotes>Microsoft .NET Framework 2.0 support via LINQBridge</releaseNotes>
+        <dependencies>
+            <group targetFramework="net35" />
+            <group targetFramework="net20">
+                <dependency id="LinqBridge.Embedded" />
+            </group>
+        </dependencies>
     </metadata>
     <files>
-        <file src="..\MoreLinq\Generate.cs" target="content\net35\MoreLinq\MoreEnumerable.Generate.cs" />
+        <file src="..\MoreLinq\Generate.cs" target="content\net20\MoreLinq\MoreEnumerable.Generate.cs" />
     </files>
 </package>
