--- a/pkg/MoreLinq.Source.MoreEnumerable.GroupAdjacent.nuspec
+++ b/pkg/MoreLinq.Source.MoreEnumerable.GroupAdjacent.nuspec
@@ -2,7 +2,7 @@
 <package>
     <metadata>
         <id>MoreLinq.Source.MoreEnumerable.GroupAdjacent</id>
-        <version>1.0.0</version>
+        <version>1.0.1</version>
         <title>MoreLINQ's GroupAdjacent for C# Sequences (Source)</title>
         <authors>MoreLINQ Developers</authors>
         <owners>Jon Skeet, Atif Aziz</owners>
@@ -13,8 +13,15 @@
         <description>C# source implementation that enhances LINQ to Objects with the method GroupAdjacent. Groups the adjacent elements of a sequence according to a specified key selector function.</description>
         <language>en-US</language>
         <tags>linq extensions</tags>
+        <releaseNotes>Microsoft .NET Framework 2.0 support via LINQBridge</releaseNotes>
+        <dependencies>
+            <group targetFramework="net35" />
+            <group targetFramework="net20">
+                <dependency id="LinqBridge.Embedded" />
+            </group>
+        </dependencies>
     </metadata>
     <files>
-        <file src="..\MoreLinq\GroupAdjacent.cs" target="content\net35\MoreLinq\MoreEnumerable.GroupAdjacent.cs" />
+        <file src="..\MoreLinq\GroupAdjacent.cs" target="content\net20\MoreLinq\MoreEnumerable.GroupAdjacent.cs" />
     </files>
 </package>
