--- a/pkg/MoreLinq.Source.MoreEnumerable.Pairwise.nuspec
+++ b/pkg/MoreLinq.Source.MoreEnumerable.Pairwise.nuspec
@@ -2,7 +2,7 @@
 <package>
     <metadata>
         <id>MoreLinq.Source.MoreEnumerable.Pairwise</id>
-        <version>1.0.0</version>
+        <version>1.0.1</version>
         <title>MoreLINQ's Pairwise for C# Sequences (Source)</title>
         <authors>MoreLINQ Developers</authors>
         <owners>Jon Skeet, Atif Aziz</owners>
@@ -13,8 +13,15 @@
         <description>C# source implementation that enhances LINQ to Objects with the method Pairwise. Returns a sequence resulting from applying a function to each element in the source sequence and its predecessor, with the exception of the first element which is only returned as the predecessor of the second element.</description>
         <language>en-US</language>
         <tags>linq extensions</tags>
+        <releaseNotes>Microsoft .NET Framework 2.0 support via LINQBridge</releaseNotes>
+        <dependencies>
+            <group targetFramework="net35" />
+            <group targetFramework="net20">
+                <dependency id="LinqBridge.Embedded" />
+            </group>
+        </dependencies>
     </metadata>
     <files>
-        <file src="..\MoreLinq\Pairwise.cs" target="content\net35\MoreLinq\MoreEnumerable.Pairwise.cs" />
+        <file src="..\MoreLinq\Pairwise.cs" target="content\net20\MoreLinq\MoreEnumerable.Pairwise.cs" />
     </files>
 </package>
