--- a/pkg/MoreLinq.Source.MoreEnumerable.ToDelimitedString.nuspec
+++ b/pkg/MoreLinq.Source.MoreEnumerable.ToDelimitedString.nuspec
@@ -2,7 +2,7 @@
 <package>
     <metadata>
         <id>MoreLinq.Source.MoreEnumerable.ToDelimitedString</id>
-        <version>1.1.0</version>
+        <version>1.1.1</version>
         <title>MoreLINQ's ToDelimitedString for C# Sequences (Source)</title>
         <authors>MoreLINQ Developers</authors>
         <owners>Jon Skeet, Atif Aziz</owners>
@@ -13,10 +13,16 @@
         <description>C# source implementation that enhances LINQ to Objects with the method ToDelimitedString. Creates a delimited string from a sequence of values. The delimiter used depends on the current culture of the executing thread.</description>
         <language>en-US</language>
         <tags>linq extensions</tags>
-        <releaseNotes>New overloads to avoid boxing for commonly used value types</releaseNotes>
+        <releaseNotes>Microsoft .NET Framework 2.0 support via LINQBridge</releaseNotes>
+        <dependencies>
+            <group targetFramework="net35" />
+            <group targetFramework="net20">
+                <dependency id="LinqBridge.Embedded" />
+            </group>
+        </dependencies>
     </metadata>
     <files>
-        <file src="..\MoreLinq\ToDelimitedString.cs" target="content\net35\MoreLinq\MoreEnumerable.ToDelimitedString.cs" />
-        <file src="..\MoreLinq\ToDelimitedString.g.cs" target="content\net35\MoreLinq\MoreEnumerable.ToDelimitedString.g.cs" />
+        <file src="..\MoreLinq\ToDelimitedString.cs" target="content\net20\MoreLinq\MoreEnumerable.ToDelimitedString.cs" />
+        <file src="..\MoreLinq\ToDelimitedString.g.cs" target="content\net20\MoreLinq\MoreEnumerable.ToDelimitedString.g.cs" />
     </files>
 </package>
