--- a/pkg/MoreLinq.Source.MoreEnumerable.nuspec
+++ b/pkg/MoreLinq.Source.MoreEnumerable.nuspec
@@ -2,7 +2,7 @@
 <package>
     <metadata>
         <id>MoreLinq.Source.MoreEnumerable</id>
-        <version>1.1.0</version>
+        <version>1.1.1</version>
         <title>MoreLINQ for C# Sequences (Source)</title>
         <authors>MoreLINQ Developers</authors>
         <owners>Jon Skeet, Atif Aziz</owners>
@@ -13,41 +13,84 @@
         <description>C# source implementation that enhances LINQ to Objects with the following methods: Acquire, AssertCount, Batch, Concat, Consume, DistinctBy, EquiZip, ExceptBy, Fold, ForEach, Generate, GenerateByIndex, GroupAdjacent, Index, MaxBy, MinBy, Pad, Pairwise, Pipe, Prepend, PreScan, Scan, SingleOrFallback, SkipUntil, Split, TakeEvery, TakeLast, TakeUntil, ToDataTable, ToDelimitedString, ToHashSet, Trace, Zip, ZipLongest</description>
         <language>en-US</language>
         <tags>linq extensions</tags>
+        <releaseNotes>Microsoft .NET Framework 2.0 support via LINQBridge</releaseNotes>
         <dependencies>
-            <dependency id="MoreLinq.Source.MoreEnumerable.Acquire" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.AssertCount" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.Batch" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.Concat" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.Consume" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.DistinctBy" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.EquiZip" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.ExceptBy" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.Fold" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.ForEach" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.Generate" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.GenerateByIndex" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.GroupAdjacent" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.Index" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.MaxBy" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.MinBy" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.Pad" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.Pairwise" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.Pipe" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.Prepend" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.PreScan" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.Scan" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.SingleOrFallback" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.SkipUntil" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.Split" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.TakeEvery" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.TakeLast" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.TakeUntil" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.ToDataTable" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.ToDelimitedString" version="[1.1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.ToHashSet" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.Trace" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.Zip" version="[1,2)" />
-            <dependency id="MoreLinq.Source.MoreEnumerable.ZipLongest" version="[1,2)" />
+            <group targetFramework="net35">
+                <dependency id="MoreLinq.Source.MoreEnumerable.Acquire" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.AssertCount" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Batch" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Concat" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Consume" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.DistinctBy" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.EquiZip" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.ExceptBy" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Fold" version="[1.1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.ForEach" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Generate" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.GenerateByIndex" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.GroupAdjacent" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Index" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.MaxBy" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.MinBy" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Pad" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Pairwise" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Pipe" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Prepend" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.PreScan" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Scan" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.SingleOrFallback" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.SkipUntil" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Split" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.TakeEvery" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.TakeLast" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.TakeUntil" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.ToDataTable" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.ToDelimitedString" version="[1.1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.ToHashSet" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Trace" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Zip" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.ZipLongest" version="[1,2)" />
+            </group>
+            <group targetFramework="net20">
+                <dependency id="MoreLinq.Source.MoreEnumerable.Acquire" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.AssertCount" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Batch" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Concat" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Consume" version="[1,2)" />
+                <!-- Excluded as HashSet<T> is not available in .NET 2.0
+                <dependency id="MoreLinq.Source.MoreEnumerable.DistinctBy" version="[1,2)" />-->
+                <dependency id="MoreLinq.Source.MoreEnumerable.EquiZip" version="[1,2)" />
+                <!-- Excluded as HashSet<T> is not available in .NET 2.0
+                <dependency id="MoreLinq.Source.MoreEnumerable.ExceptBy" version="[1,2)" />-->
+                <dependency id="MoreLinq.Source.MoreEnumerable.Fold" version="[1.1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.ForEach" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Generate" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.GenerateByIndex" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.GroupAdjacent" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Index" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.MaxBy" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.MinBy" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Pad" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Pairwise" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Pipe" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Prepend" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.PreScan" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Scan" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.SingleOrFallback" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.SkipUntil" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Split" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.TakeEvery" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.TakeLast" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.TakeUntil" version="[1,2)" />
+                <!-- Excluded as System.Linq.Expressions is not available in .NET 2.0
+                <dependency id="MoreLinq.Source.MoreEnumerable.ToDataTable" version="[1,2)" />-->
+                <dependency id="MoreLinq.Source.MoreEnumerable.ToDelimitedString" version="[1.1,2)" />
+                <!-- Excluded as HashSet<T> is not available in .NET 2.0
+                <dependency id="MoreLinq.Source.MoreEnumerable.ToHashSet" version="[1,2)" />-->
+                <dependency id="MoreLinq.Source.MoreEnumerable.Trace" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.Zip" version="[1,2)" />
+                <dependency id="MoreLinq.Source.MoreEnumerable.ZipLongest" version="[1,2)" />
+            </group>
         </dependencies>
     </metadata>
     <files>
